--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -57,17 +57,61 @@
 .profileheader { background-image: -webkit-linear-gradient(top,white,rgb(243, 243, 243)); padding: 3px 10px 6px 10px; border: 1px solid rgba(0,0,0,.1);border-bottom: none;border-top-right-radius: 6px;border-top-left-radius: 6px;}
 .profileheader img{ display:inline-block; width:40px; height:40px;  }
 .profileheader h3 { display:inline-block; font-size: 20px; text-transform: uppercase; }
-.challengeselector { background-color: #f9f9f9; border: 1px solid rgba(0,0,0,.1);border-bottom-left-radius: 6px; border-bottom: none; border-right: none; }
-.challengeselector img { width:27px; height:27px; border-radius:3px; display:inline-block; }
-.challengeselector ul { list-style: none; margin:0;  }
-.challengeselector li { font-size:16px; border-bottom:1px solid rgba(0,0,0,.1); padding: 8px 12px; cursor:pointer; color:gray; }
-.challengeselector .selected { color: rgb(75, 75, 75);-webkit-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);-moz-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);box-shadow: inset 0 2px 12px rgba(0,0,0,.15);background-color: #eee;background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);background-image: -moz-linear-gradient(top,#eee,#e0e0e0);background-image: -ms-linear-gradient(top,#eee,#e0e0e0);background-image: -o-linear-gradient(top,#eee,#e0e0e0);background-image: linear-gradient(top,#eee,#e0e0e0); }
-.challengeselector .selected:hover { -webkit-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);-moz-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);box-shadow: inset 0 2px 12px rgba(0,0,0,.15);background-color: #eee;background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);background-image: -moz-linear-gradient(top,#eee,#e0e0e0);background-image: -ms-linear-gradient(top,#eee,#e0e0e0);background-image: -o-linear-gradient(top,#eee,#e0e0e0);background-image: linear-gradient(top,#eee,#e0e0e0); }
-.challengeselector li .pts { font-size:11px; float:right; position:relative; top:5px; }
-.challengeselector li:last-child:hover { border-bottom-left-radius:6px; }
-.challengeselector li:hover { background-image: -moz-linear-gradient(white, white 5%, #E6E6E6); background-image: -ms-linear-gradient(white, white 5%, #E6E6E6);  background-image: -o-linear-gradient(white, white 5%, #E6E6E6);  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), color-stop(0.05, white), to(#E6E6E6));  background-image: -webkit-linear-gradient(white, white 5%, #E6E6E6);  background-image: linear-gradient(white, white 5%, #E6E6E6);  color: rgb(75, 75, 75);  text-shadow: 0 1px 0px whitesmoke;  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6');  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6')";  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);    box-shadow: 0 1px 1px rgba(0,0,0,0.2);}
-.challengeselector li:active { background-color: rgb(245, 245, 245);  background-image: none;  outline: 0;  -webkit-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  -moz-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);}
-.challengeselector li div { position:relative; display:inline-block; top:4px;}
+
+.challengeselector { 
+  background-color: #f9f9f9; 
+  border: 1px solid rgba(0,0,0,.1);
+  border-bottom-left-radius: 6px; 
+  border-bottom: none; 
+  border-right: none; 
+  
+  .private-marker {
+    font-size: 11px;
+    top: 2px;
+    position: relative;
+  }
+  .selected { 
+    color: rgb(75, 75, 75);
+    -webkit-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);
+    -moz-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);
+    box-shadow: inset 0 2px 12px rgba(0,0,0,.15);
+    background-color: #eee;
+    background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);
+    background-image: -moz-linear-gradient(top,#eee,#e0e0e0);
+    background-image: -ms-linear-gradient(top,#eee,#e0e0e0);
+    background-image: -o-linear-gradient(top,#eee,#e0e0e0);
+    background-image: linear-gradient(top,#eee,#e0e0e0); 
+    
+    &:hover { 
+      -webkit-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);
+      -moz-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);
+      box-shadow: inset 0 2px 12px rgba(0,0,0,.15);
+      background-color: #eee;
+      background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);
+      background-image: -moz-linear-gradient(top,#eee,#e0e0e0);
+      background-image: -ms-linear-gradient(top,#eee,#e0e0e0);
+      background-image: -o-linear-gradient(top,#eee,#e0e0e0);
+      background-image: linear-gradient(top,#eee,#e0e0e0); 
+    }
+  }
+  img { width:27px; height:27px; border-radius:3px; display:inline-block; }
+  ul { list-style: none; margin:0;  }
+  li { 
+    font-size:16px; 
+    border-bottom:1px solid rgba(0,0,0,.1); 
+    padding: 8px 12px; 
+    cursor:pointer; 
+    color:gray; 
+    
+    &:hover {background-image: -moz-linear-gradient(white, white 5%, #E6E6E6); background-image: -ms-linear-gradient(white, white 5%, #E6E6E6);  background-image: -o-linear-gradient(white, white 5%, #E6E6E6);  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), color-stop(0.05, white), to(#E6E6E6));  background-image: -webkit-linear-gradient(white, white 5%, #E6E6E6);  background-image: linear-gradient(white, white 5%, #E6E6E6);  color: rgb(75, 75, 75);  text-shadow: 0 1px 0px whitesmoke;  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6');  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6')";  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);    box-shadow: 0 1px 1px rgba(0,0,0,0.2);}
+    &:last-child:hover {border-bottom-left-radius:6px; }
+    &:active { background-color: rgb(245, 245, 245);  background-image: none;  outline: 0;  -webkit-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  -moz-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);}
+    
+    .pts { font-size:11px; float:right; position:relative; top:5px; }
+    div { position:relative; display:inline-block; top:4px;}
+  }
+}
+
 #profile .span11 { margin:0; }
 #profile .span5 { width: 31.225%; }
 #profile .span5 .leftbox { width:288px; margin-top:12px; }
@@ -83,7 +127,7 @@
     .gear { 
       float: right; 
       opacity: 0.8; 
-      bottom: 0;
+      top: 7px;
       width: 25px;
       
       &:hover {opacity: 1;}
@@ -92,7 +136,7 @@
     a { text-decoration: none; }
   }
   #privatizer {
-    font-size: 14px; float: right; margin-top: -6px;
+    font-size: 14px; float: right;
   }
 }
 
