--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -241,7 +241,8 @@
                 .my_ms_graph
                   / The graph must have a range of 280 to 850, even though 300 is the lowest metascore possible
                   .graph
-                    %span.bar{ style: "width: 12%;"}
+                    .progress.profileprog
+                      %span.bar{ style: "width: 12%;"}
                     .ticks
                       .big-hash
                         |
@@ -259,7 +260,7 @@
                       %span{ style: "margin-right: 9.1%;"} Novice
                       %span{ style: "margin-right: 7.4%;"} Familiar
                       %span{ style: "margin-right: 6.2%;"} Competent
-                      %span{ style: "margin-right: 8%;"}Advanced
+                      %span{ style: "margin-right: 8%;"} Advanced
                       %span Expert
                 .my_strengths
                   %h3 Strengths
