--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -180,6 +180,8 @@
 
 
 .profilecontent {
+  margin-top: 20px;
+  
   a { text-decoration: none; cursor: pointer; }
   
   .table {
@@ -205,54 +207,28 @@
     	-moz-border-radius: 5px;
     	-webkit-border-radius: 5px;
     	border-radius: 5px;
-    	padding: 14px 30px 17px;
+    	padding: 14px 30px;
     	-webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
     	-moz-box-shadow   : inset 0 -1px 1px rgba(255,255,255,0.3);
     	box-shadow        : inset 0 -1px 1px rgba(255,255,255,0.3);
       
+      .progress {
+        height: 20px; 
+        border-radius: 10px;
+      	-webkit-border-radius: 10px;
+      	-moz-border-radius: 10px;
+      }
+      .profileprog {
+        background-image: -webkit-linear-gradient(top, #9A9A9A, #B0B0B0);
+        background-image: -moz-linear-gradient(top, #9A9A9A, #B0B0B0);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#9A9A9A), to(#B0B0B0));
+        background-image: -webkit-linear-gradient(top, #9A9A9A, #B0B0B0);
+        background-image: -o-linear-gradient(top, #9A9A9A, #B0B0B0);
+        background-color: rgb(164, 164, 164);
+        margin-bottom: 0;
+      }
       .bar {
       	display: block;
-      	height: 50%;
-      	   -webkit-border-top-right-radius: 3px;
-      	-webkit-border-bottom-right-radius: 3px;
-      	       -moz-border-radius-topright: 3px;
-      	    -moz-border-radius-bottomright: 3px;
-      	           border-top-right-radius: 3px;
-      	        border-bottom-right-radius: 3px;
-      	    -webkit-border-top-left-radius: 10px;
-      	 -webkit-border-bottom-left-radius: 10px;
-      	        -moz-border-radius-topleft: 10px;
-      	     -moz-border-radius-bottomleft: 10px;
-      	            border-top-left-radius: 10px;
-      	         border-bottom-left-radius: 10px;
-      	background-color: rgb(43,194,83);
-      	background-image: -webkit-gradient(
-      	  linear,
-      	  left bottom,
-      	  left top,
-      	  color-stop(0, rgb(43,194,83)),
-      	  color-stop(1, rgb(84,240,84))
-      	 );
-      	background-image: -webkit-linear-gradient(
-      	  center bottom,
-      	  rgb(43,194,83) 37%,
-      	  rgb(84,240,84) 69%
-      	 );
-      	background-image: -moz-linear-gradient(
-      	  center bottom,
-      	  rgb(43,194,83) 37%,
-      	  rgb(84,240,84) 69%
-      	 );
-      	background-image: -ms-linear-gradient(
-      	  center bottom,
-      	  rgb(43,194,83) 37%,
-      	  rgb(84,240,84) 69%
-      	 );
-      	background-image: -o-linear-gradient(
-      	  center bottom,
-      	  rgb(43,194,83) 37%,
-      	  rgb(84,240,84) 69%
-      	 );
       	-webkit-box-shadow: 
       	  inset 0 2px 9px  rgba(255,255,255,0.3),
       	  inset 0 -2px 6px rgba(0,0,0,0.4);
@@ -261,12 +237,7 @@
       	  inset 0 -2px 6px rgba(0,0,0,0.4);
       	position: relative;
       	overflow: hidden;
-          background-color: #f1a165;
-      	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f1a165),color-stop(1, #f36d0a));
-      	background-image: -webkit-linear-gradient(top, #f1a165, #f36d0a); 
-              background-image: -moz-linear-gradient(top, #f1a165, #f36d0a);
-              background-image: -ms-linear-gradient(top, #f1a165, #f36d0a);
-              background-image: -o-linear-gradient(top, #f1a165, #f36d0a);
+        background: rgb(168, 236, 255);
       }
       .ticks {
         width: 100%;
