--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -148,16 +148,6 @@
 .profileprog {background-color: rgb(228, 228, 228); background-image: -moz-linear-gradient(top, rgb(228, 228, 228), rgb(240, 240, 240));background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgb(228, 228, 228)), to(rgb(240, 240, 240)));background-image: -webkit-linear-gradient(top, rgb(228, 228, 228), rgb(240, 240, 240));background-image: -o-linear-gradient(top, rgb(228, 228, 228), rgb(240, 240, 240));background-image: linear-gradient(to bottom, rgb(228, 228, 228), rgb(240, 240, 240));}
 .profileheader h5 { display: inline-table; float: right; margin-top:14px; font-size:18px; }
 .arenabucket { padding: 13px 12px 27px 28px;}
-.myrank { 
-  display:inline-block; 
-  text-align: center;position: 
-  relative; top: 23px;
-  min-width: 138px;
-  
-  span { font-size:79px; }
-  p { margin-bottom:5px; margin-top:6px; font-weight:bold; font-size:15px; }
-  .skill-tag { padding: 10px 5px; display: block; margin: 6px 0; letter-spacing: 2px; font-size: 19px;}
-}
 .usercard { padding-top: 6px;border: 1px solid rgba(0,0,0,.1);border-radius: 6px;background-color: whitesmoke;display: inline-block;color: gray;font-size: 12px;min-width: 597px;padding: 2px 10px 10px;}
 .usercard ul { }
 .shareprofile { float:right;border: 1px solid rgba(0,0,0,.1);padding: 5px 8px;background-color: #f9f9f9;border-radius: 5px; }
@@ -197,82 +187,6 @@
     }
   }
   
-  .my_ms_graph { 
-    margin-top: 20px; 
-    
-    .graph { 
-    	height: 45px;  /* Can be anything */
-    	position: relative;
-    	background: #555;
-    	-moz-border-radius: 5px;
-    	-webkit-border-radius: 5px;
-    	border-radius: 5px;
-    	padding: 14px 30px;
-    	-webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
-    	-moz-box-shadow   : inset 0 -1px 1px rgba(255,255,255,0.3);
-    	box-shadow        : inset 0 -1px 1px rgba(255,255,255,0.3);
-      
-      .progress {
-        height: 20px; 
-        border-radius: 10px;
-      	-webkit-border-radius: 10px;
-      	-moz-border-radius: 10px;
-      }
-      .profileprog {
-        background-image: -webkit-linear-gradient(top, #9A9A9A, #B0B0B0);
-        background-image: -moz-linear-gradient(top, #9A9A9A, #B0B0B0);
-        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#9A9A9A), to(#B0B0B0));
-        background-image: -webkit-linear-gradient(top, #9A9A9A, #B0B0B0);
-        background-image: -o-linear-gradient(top, #9A9A9A, #B0B0B0);
-        background-color: rgb(164, 164, 164);
-        margin-bottom: 0;
-      }
-      .bar {
-      	display: block;
-      	-webkit-box-shadow: 
-      	  inset 0 2px 9px  rgba(255,255,255,0.3),
-      	  inset 0 -2px 6px rgba(0,0,0,0.4);
-      	-moz-box-shadow: 
-      	  inset 0 2px 9px  rgba(255,255,255,0.3),
-      	  inset 0 -2px 6px rgba(0,0,0,0.4);
-      	position: relative;
-      	overflow: hidden;
-        background: rgb(168, 236, 255);
-      }
-      .ticks {
-        width: 100%;
-        margin-left: 3.6%;
-        vertical-align: top;
-        margin-top: -8px;
-        
-        .small-hash, .big-hash {
-          margin-right: 3.98%;
-          &:last-child {margin-right: 0;}
-        }
-        .small-hash {
-          color: white;
-          display: inline;
-          font-size: 6px;
-        }
-        .big-hash {
-          color: white;
-          display: inline;
-          font-size: 9px;
-        }
-      }
-      .descriptors {
-        text-align: left;
-        margin-left: -3%;
-        margin-right: -4%;
-        
-        span {
-          color: white;
-          font-size: 11px;
-        }
-      }
-    }
-  }
-  
   .my_strengths {
     margin: 25px 0 -10px 0;
     padding-right: 15px;
@@ -294,6 +208,101 @@
         border-radius: 6px;
       }
     }    
+  }
+}
+
+// This code also appears on the grade page
+.graph_space { 
+  margin-top: 20px; 
+  
+  .ms_graph { 
+  	height: 45px;  /* Can be anything */
+  	position: relative;
+  	background: #555;
+  	-moz-border-radius: 5px;
+  	-webkit-border-radius: 5px;
+  	border-radius: 5px;
+  	padding: 14px 30px;
+  	-webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+  	-moz-box-shadow   : inset 0 -1px 1px rgba(255,255,255,0.3);
+  	box-shadow        : inset 0 -1px 1px rgba(255,255,255,0.3);
+    
+    .progress {
+      height: 20px; 
+      border-radius: 10px;
+    	-webkit-border-radius: 10px;
+    	-moz-border-radius: 10px;
+    }
+    .profileprog {
+      background-image: -webkit-linear-gradient(top, #9A9A9A, #B0B0B0);
+      background-image: -moz-linear-gradient(top, #9A9A9A, #B0B0B0);
+      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#9A9A9A), to(#B0B0B0));
+      background-image: -webkit-linear-gradient(top, #9A9A9A, #B0B0B0);
+      background-image: -o-linear-gradient(top, #9A9A9A, #B0B0B0);
+      background-color: rgb(164, 164, 164);
+      margin-bottom: 0;
+    }
+    .bar {
+    	display: block;
+    	-webkit-box-shadow: 
+    	  inset 0 2px 9px  rgba(255,255,255,0.3),
+    	  inset 0 -2px 6px rgba(0,0,0,0.4);
+    	-moz-box-shadow: 
+    	  inset 0 2px 9px  rgba(255,255,255,0.3),
+    	  inset 0 -2px 6px rgba(0,0,0,0.4);
+    	position: relative;
+    	overflow: hidden;
+      background: rgb(168, 236, 255);
+    }
+    .ticks {
+      width: 100%;
+      margin-left: 3.2%;
+      vertical-align: top;
+      margin-top: -8px;
+      
+      .small-hash, .big-hash {
+        margin-right: 3.98%;
+        &:last-child {margin-right: 0;}
+      }
+      .small-hash {
+        color: white;
+        display: inline;
+        font-size: 6px;
+      }
+      .big-hash {
+        color: white;
+        display: inline;
+        font-size: 9px;
+      }
+    }
+    .descriptors {
+      text-align: left;
+      margin-left: -3%;
+      margin-right: -4%;
+      
+      span {
+        color: white;
+        font-size: 11px;
+      }
+    }
+  }
+}
+
+// This code is also used on the grade page
+.myrank { 
+  display:inline-block; 
+  text-align: center;
+  position: relative; 
+  top: 23px;
+  min-width: 138px;
+  margin-right: 12px;
+  
+  span { font-size:79px; }
+  p { margin-bottom:5px; margin-top:6px; font-weight:bold; font-size:15px; }
+  .skill-tag { padding: 10px 5px; display: block; margin: 6px 0; letter-spacing: 2px; font-size: 19px;}
+  .text {
+    color: rgb(116, 116, 116); 
+    font-size: 14px;
   }
 }
 
