--- a/app/views/evaluations/grade.html.haml
+++ b/app/views/evaluations/grade.html.haml
@@ -8,7 +8,6 @@
       $("#results_list li").removeClass("active");
       $(this).addClass("active");
     })
-    $.MB.initEvaluationGradeCharts();
   });
 
 :css
@@ -17,8 +16,10 @@
   .header { margin: 0 0 20px 0; }
   [data-tip]:before { left: 7px; }
   [data-tip]:after { left: -17px; }
+  td.table_tip {padding: 12px 8px;}
   .table_tip [data-tip]:before { left: 34px; top: 35px;}
   .table_tip [data-tip]:after { left: 8px; top: 44px; width: 165px; height: 52px; white-space: normal; }
+  .ms {display: inline-block; position: relative; bottom: 1px;}
   .ms [data-tip]:after { width: 276px; height: 143px; top: 23px; left:-20px; white-space: normal;}
   .ms [data-tip]:before { left: 3px; }
   
@@ -78,18 +79,42 @@
           .evaluation.hide{ id: r[:permalink] }
             - unless r[:is_difficult]
               = render "paths/difficulty_warning"
-            .header{ style: "padding-left: 0;"}
-              %h3 Candidate Summary
-              .metascore_graph{ :data => { "metascore" => r[:ms_for_graph], "skill" => r[:skill_level] } }
-              .clear_floats
+            .header{ style: "padding-left: 0; display: inline-block;"}
+              %h3{ style: "border-bottom: 1px solid rgba(0,0,0,.1); line-height: 32px;" } Candidate Summary
+            .graph_space{ style: "width: 558px; display: inline-block; float: right;"}
+              .ms_graph
+                .progress.profileprog
+                  - width = ((r[:ms_for_graph] - 300)/492.8 + (20/492.8)) * 100
+                  %span.bar{ style: "width: #{width}%;"}
+                .ticks
+                  .big-hash
+                    |
+                  - 5.times do
+                    .small-hash 
+                      |
+                    .small-hash 
+                      |
+                    .small-hash 
+                      |
+                    .big-hash 
+                      |
+                .descriptors
+                  %span{ style: "margin-right: 7.7%;"} Unqualified
+                  %span{ style: "margin-right: 9.1%;"} Novice
+                  %span{ style: "margin-right: 7.3%;"} Familiar
+                  %span{ style: "margin-right: 6.1%;"} Competent
+                  %span{ style: "margin-right: 8.4%;"} Advanced
+                  %span Expert
+            .clear_floats
             .challenge_stats
-              .big_skill_space
-                .big_skill.label{ class: r[:skill_level].downcase}
+              .myrank
+                %span= r[:ms_for_graph]
+                .skill-tag.label{ class: r[:skill_level].downcase}
                   = r[:skill_level]
                 .text
                   MetaScore Ranking
                   .ms{ style: "display: inline-block;" }                    
-                    .tip-below{ style: "display: inline-block;", data: {tip: "This is the ability level MetaBright estimates this person to possess for this skill. Our algorithm analyzes many variables to reach this conclusion such as question difficulty, content topic, and responder speed. Question difficulty is dynamically calculated, so it's possible for your candidates' MetaScores to slightly shift as question difficulties evolve."}}
+                    .tip-below{ style: "display: inline-block;", data: {tip: "MetaScores range from 850 to 300. This is the ability level MetaBright estimates this person to possess for this skill. Our algorithm analyzes many variables to reach this conclusion such as question difficulty, content topic, and responder speed. Question difficulty is dynamically calculated, so it's possible for your candidates' MetaScores to slightly shift as question difficulties evolve."}}
                       %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png", style: "width: 16px; height: 16px; display: inline-block; margin-bottom: 3px;"}
               %table.table.overview
                 %tbody
