--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -1,8 +1,3 @@
-:javascript
-  $(function(){
-    $.MB.initEvaluationGradeCharts();
-  });
-  
 :css
   .tip-below[data-tip]:after { width: 250px; height: 143px; top: 41px; left:-65px; white-space: normal;}
   .tip-below[data-tip]:before { left: 63px; top: 31px; }
@@ -238,11 +233,11 @@
                       / %td
                       /   %h3.comments-received-count= enrollment_details[:comments]
                       /   %p Comments Received
-                .my_ms_graph
-                  / The graph must have a range of 280 to 850, even though 300 is the lowest metascore possible
-                  .graph
+                .graph_space
+                  .ms_graph
                     .progress.profileprog
-                      %span.bar{ style: "width: 12%;"}
+                      - width = ((enrollment.metascore - 300)/492.8 + (20/492.8)) * 100
+                      %span.bar{ style: "width: #{width}%;"}
                     .ticks
                       .big-hash
                         |
@@ -256,10 +251,10 @@
                         .big-hash 
                           |
                     .descriptors
-                      %span{ style: "margin-right: 7.9%;"} Unqualified
+                      %span{ style: "margin-right: 7.7%;"} Unqualified
                       %span{ style: "margin-right: 9.1%;"} Novice
-                      %span{ style: "margin-right: 7.4%;"} Familiar
-                      %span{ style: "margin-right: 6.2%;"} Competent
+                      %span{ style: "margin-right: 7.3%;"} Familiar
+                      %span{ style: "margin-right: 6.1%;"} Competent
                       %span{ style: "margin-right: 8%;"} Advanced
                       %span Expert
                 .my_strengths
