edits to finish page

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -2024,6 +2024,11 @@ th {
       font-size: 41px; 
       line-height: 45px;
     } 
+  }
+  .finish-ms-tag {
+    font-size: 16px;
+    min-width: 92px;
+    padding: 5px 10px;
   } 
  
   #metrics_faq {
