--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -2,6 +2,9 @@
   body.employer{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
   .quizcontainer { width: 650px; }
+  .tip-below {font-size: 12px;}
+  .tip-below[data-tip]:after { width: 122px; height: 125px; top: 31px; left:-2px; white-space: normal;}
+  .tip-below[data-tip]:before { left: 63px; top: 21px; }
   
 %div.quizcontainer.finish_page
   %div.quizspace
@@ -28,12 +31,12 @@
         - else
           .metric
             .score= @enrollment.metascore
-            %div
-              Your #{truncate(@path.name, length: 25, separator: ' ')} MetaScore
+            .tip-below{ data: {tip: "This is your MetaScore. Your MetaScore ranges from 300 to 850 -- just like a credit score. To learn more about how MetaScores are calculated, click 'Learn more about these metrics.'"}}
+              %div{ class: "label #{@enrollment.describe_skill_level.downcase} finish-ms-tag"}= @enrollment.describe_skill_level
           .metric{ style: "margin: 0 8px;"}
             .score= "#{@enrollment.metapercentile}%"
             %div
-              Your percentile ranking 
+              Percentile ranking 
         .metric{ style: "border-left: 1px solid rgba(0,0,0,0.1); padding: 0 8px;" }
           .score= @enrollment.total_points
           %div
@@ -61,16 +64,17 @@
           %p
             %span What's a MetaScore?
             %br
-            Your MetaScore is a Challenge-specific measurement of how good you are at that skill.
-            It's based on how well you perform in all areas of a Challenge. 
-            We take into account a bunch of variables such as question difficulty, response time, and breadth of questions taken.
+            Your MetaScore is like a credit score for a particular skill.
+            Similar to a credit score, it ranges from 300 to 850.
+            Your MetaScore is based on how well you perform in all areas of a Challenge. 
+            It takes into account many variables such as question difficulty, response time, and breadth of questions taken.
           %p
             %span How does my MetaScore differ from my point total?
             %br
             It differs in a couple different ways:
             %ul
               %li Your MetaScore can fluctuate up and down, whereas your point total can only go up. 
-              %li Your point total and level are always publicly visible. Your MetaScore (and percentile) is private to you unless you choose otherwise.
+              %li Your point total and level could be visible on the Challenge homepage. Your MetaScore is only visible on your profile.
               %li The accuracy of your MetaScore improves over time to approximate your actual ability in a Challenge. Your point total could be independent of actual ability.        
           %p
             %span How is my percentile calculated?
@@ -79,13 +83,13 @@
           %p 
             %span But I've barely done anything yet!
             %br
-            If you're just starting out your percentile ranking may not be that accurate yet. 
+            If you're just starting out, your MetaScore ranking may not be that accurate yet. 
             The more you do in a Challenge, the truer your percentile ranking should be.
           %p
             %span Who can see my MetaScore and percentile?
             %br
-            By default, your MetaScore and percentile are only visible to you. 
-            If you choose to use MetaBright to surface jobs or internships for you, your MetaScore and percentile will be anonymously visible (ie. your name or other identifying information won't be used).
+            Your MetaScore is visible on your profile, although you can choose to make it private at any time. 
+            If you choose to use MetaBright to surface jobs or internships for you, your MetaScore and percentile will be anonymously visible to potential employers (ie. your name or other identifying information won't be used).
           %p
             %span How can I improve my MetaScore and percentile?
             %br          
