--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -468,3 +468,42 @@
     a {text-decoration: none; }    
   }
 }
+
+#profile, #challenge, #homepage{
+  .help_box{
+    background-clip: padding-box;
+    background-color:#FFF7CD;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-radius: 6px;
+    color: #333;
+    margin-bottom: 12px;
+    padding: 2px 15px 5px 5px;
+    position: relative;
+    
+    .submit_button { margin: 0 auto; display: inline-block; float: none; width: 220px;}
+    .submit_button_green { float: none; margin-bottom: 10px; width: inherit; padding: 4px 10px; font-size: 14px; }
+    .submit_button_green_big { font-size: 18px; line-height: 30px; padding: 7px 20px 5px 20px;}
+    .help_close { position:relative; left:10px; }
+    .header { margin-top:-6px; }
+    .header h1 { display:inline; position:relative; top:12px; font-size: 40px; }
+    .header img { display:inline; height:90px; }
+    .body { 
+      margin: 0 0 10px 10px;
+      text-align: center;
+      
+      p { text-align: left; font-size: 17px;}
+      h4 { text-align: left; }
+      img { height: 30px; width: 30px; }
+      form { margin-bottom: 5px; border: none; }
+      input { width:180px; }
+      
+      .divider{
+        background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/divider.png);
+        background-repeat: no-repeat;
+        background-position: center 10px;
+        width: 466px;
+        margin: 10px auto;
+      }
+    }
+  }
+}
