--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -9,6 +9,16 @@
 
 
 #profile{itemscope: "", itemtype: "http://data-vocabulary.org/Person"}
+  - if @user == current_user && current_user.private_at != nil
+    .help_box
+      .header
+        = image_tag STONEY_SMALL_URL, alt: "Stoney" 
+        %h1 Your profile is currently marked as private.
+      .body
+        %p When your profile is private, no one but you can view your profile. Your high scores and Creative Response answers are also hidden. People who want to follow you are unable to do so. 
+        %p To get the most out of MetaBright, we recommend setting your profile to be public.
+        %div{ style: "margin-top: 20px;" }
+          = link_to "Make My Profile Public", "#", class: "submit_button_green_big", style: "float: none;"
   - if @user == current_user && current_user.guest_user?
     .help_box
       :javascript
